# turbine-core

./: CMakeLists.txt  README.md  compile_turbinecore.sh
apps/: CMakeLists.txt
apps/ABLApp_cpu_staticRefinement/: CMakeLists.txt  LBMGeneration.py  input.prm  main.cpp  windDirectionChange.wd
apps/ABLApp_gpu_uniform/: CMakeLists.txt  LBMGeneration.py  input.prm  main.cu
apps/AppGenerator/: CMakeLists.txt  generate_app.py  helper.cmake
apps/AppGenerator/jinja_filters/: enums.py  jinja_filters.py  snapshot_handler.py  timeloop.py  welford.py
apps/AppGenerator/templates/: CMakeLists.tmpl.txt  GenerationScript.tmpl.py  input.tmpl.prm  main.tmpl.cpp
apps/AppGenerator/templates/turbine_example/: omegaRAWSControl.ctrl
apps/GeneratedApp_cpu_staticRefinement/: CMakeLists.txt  LBMGeneration.py  input.prm  main.cpp
apps/GeneratedApp_cpu_staticRefinement/airfoil_data/: NACA64_A17.foil
apps/GeneratedApp_cpu_uniform/: CMakeLists.txt  LBMGeneration.py  main.cpp
apps/GeneratedApp_gpu_uniform/: CMakeLists.txt  LBMGeneration.py  input.prm  main.cu
apps/LBM_CPU/: CMakeLists.txt  WindTurbineDefines.h  WindTurbineLBMGeneration.py  directionChangeTable.wd  input_nrel_5mw_OpenInOut.prm  input_nrel_5mw_OpenPeriodic.prm  main.cpp  pitchRAWSControl.ctrl
apps/LBM_CPU/airfoil_data/: DU35_A17.foil
apps/LBM_CPU_AMR/: CMakeLists.txt  WindTurbineDefines.h  WindTurbineLBMGeneration.py  input_nrel_5mw_OpenInOut.prm  input_nrel_5mw_OpenPeriodic.prm  main.cpp  nrel_5mw.tower
apps/LBM_CPU_AMR/airfoil_data/: nrel_5mw_Cylinder2.foil
apps/LBM_CPU_CP/: CMakeLists.txt  WindTurbineLBMGeneration.py  main.cpp  towerBaseControl.ctrl
apps/LBM_CPU_CP/airfoil_data/: nrel_5mw_Cylinder1.foil
apps/LBM_GPU/: CMakeLists.txt  WindTurbineLBMGeneration.py  input_nrel_5mw_OpenInOut.prm  input_nrel_5mw_OpenPeriodic.prm  main.cu  new_case_5.prm
apps/LBM_GPU/airfoil_data/: DU21_A17.foil  DU25_A17.foil
apps/LBM_GPU_CP/: CMakeLists.txt  WindTurbineDefines.h  WindTurbineLBMGeneration.py  input_nrel_5mw_OpenCP.prm  main.cu  nrel_5mw.blade
apps/LBM_GPU_CP/airfoil_data/: DU30_A17.foil  DU40_A17.foil
apps/WindSimulation/: CMakeLists.txt  WindSimulation.cpp
python/codegen_walberla_wind/: __init__.py  flow_drivers.py  generate_flow_driver.py
src/: CMakeLists.txt
src/aerodynamics/: AirfoilPolar.h  CMakeLists.txt
src/component/: CMakeLists.txt  Component.h  ComponentType.h
src/control_model/: CMakeLists.txt  ControlModel.h  DISCONPitchModel.h  DISCONTorqueModel.h  RAWSAnglesModel.h  RAWSOmegaModel.h  all.h  simpleYawController.h  timeControlVelocities.h
src/control_model/gpu/: CMakeLists.txt  CopyToGPU.h
src/conversion/: Conversion.h
src/data_interpolator/: DataInterpolator.h
src/discretisation/: CMakeLists.txt  Discretisation.h  Disk.h  Line.h  all.h
src/discretisation/gpu/: CMakeLists.txt  CopyToGPU.h
src/domain/: BoundaryHandling.h  BoundarySetter.h  BoundarySetup.h  CMakeLists.txt  DomainInitialiser.h  DomainSetup.h  EnvironmentSetup.h  SnapshotHandler.h  TurbineDomain.h
src/domain/refinement/: CMakeLists.txt  LevelDeterminationFunctors.h  RefinementType.h  StaticRefinementHandler.h  TurbineRefinementHandler.h  TurbineSelectorResetter.h  TurbineWeightAssignmentFunctor.h
src/domain/refinement/level_determination/: CurlBasedLevelDetermination.h  QCriterionBasedLevelDetermination.h  VectorGradientBasedLevelDetermination.h  VorticityBasedLevelDetermination.h
src/external_forces/: CMakeLists.txt  CoriolisForce.h  CoriolisForceGPU.h  DriverSetup.h  DynamicPressureGradient.h  DynamicPressureGradientGPU.h  FlowDriver.h  FlowDriverGPU.h  PressureGradient.h  PressureGradientGPU.h  ZeroForce.h  ZeroForceGPU.h
src/farm_creator/: CMakeLists.txt  ConfigTurbineCreator.h  FileParser.h  TurbineCreator.h  WindFarm.h
src/force_model/: ActuatorDiskModel.h  ActuatorLineModel.h  CMakeLists.txt  ForceModel.h  TipLossModel.h  all.h
src/force_model/gpu/: CMakeLists.txt  CopyToGPU.h
src/mpi/: CMakeLists.txt  CPUMemoryAllocator.h  CustomMemoryBuffer.h  GPUMemoryAllocator.h  SynchronisationMode.h
src/output/: CMakeLists.txt  LineOutput.h  LineOutputLine.h  LineOutputLineBase.h  LineOutputMacroscopicLine.h  Logging.h  PlaneInclusionFilter.h  TurbineBeforeFunctors.h  TurbineOutput.h
src/point3/: ActuatorData.h  CMakeLists.txt  Point3.cpp  Point3.h
src/turbine_topology/: CMakeLists.txt  Stack.h
src/turbine_topology/cpu/: CMakeLists.txt  CPUTurbineTopology.h  Tree.h
src/turbine_topology/gpu/: CMakeLists.txt  GPUTurbineTopology.h  GPUTurbineTopology_GlobalFunctions.h  Tree.h
src/walberla_helper/: CMakeLists.txt  Directions.h  IndexVectorCreator.h
src/walberla_helper/blockforest/: BlockInfo.h
src/walberla_helper/field/: Field.h  FieldCopy.h  FieldCopyGPU.h  FieldHandling.h  MacroscopicVariableCalculator.h  Projectors.h  all.h
src/walberla_helper/field/distributors/: KernelFieldDistributor.h  NearestNeighbourFieldDistributor.h
src/walberla_helper/field/interpolators/: KernelFieldInterpolator.h  NearestNeighbourFieldInterpolator.h  TrilinearFieldInterpolator.h
src/walberla_helper/field/projector_kernels/: GaussianKernel.h  M4ProjectionKernel.h  SmoothedDiracDeltaKernel.h
src/walberla_helper/refinement/: CustomRecursiveTimeStep.h
src/wind/: CMakeLists.txt  WindField.cpp  WindField.h  WindParameters.cpp  WindParameters.h
src/wind/boundary/: CMakeLists.txt  WindBoundary.h
src/wind/lbm/: CMakeLists.txt  WindLBMModel.h
src/wind_turbine_core/: CMakeLists.txt  Enums.h  ProjectDefines.h  Selectors.h  WalberlaDataTypes.h
src/wind_turbine_core/build_info/: BuildInfo.h  BuildInfo.in.cpp
src/wind_turbine_core/math/: AABB.h  AABBFwd.h  GenericAABB.h  Matrix2.h  Matrix3.h  Overloads.h  Quaternion.h  Round.h  Vector2.h  Vector3.h
src/wind_turbine_core/utility/: CenterHelper.h  StringManipulation.h
tests/: CMakeLists.txt  WindFieldTest.cpp  WindParametersTest.cpp
tests/component/: CMakeLists.txt  ComponentTypeTest.cpp
tests/domain/: BoundarySetupFieldFillerTest.cpp  BoundarySetupPeriodicityTest.cpp  CMakeLists.txt  DomainSetupDomainDecompositionTest.cpp
(+8 files in other folders)
