add_subdirectory(AppGenerator)

add_subdirectory(LBM_CPU)
add_subdirectory(LBM_CPU_CP)
add_subdirectory(LBM_CPU_AMR)
add_subdirectory(LBM_GPU)
add_subdirectory(LBM_GPU_CP)

add_subdirectory(GeneratedApp_cpu_uniform)
add_subdirectory(GeneratedApp_cpu_staticRefinement)
add_subdirectory(GeneratedApp_gpu_uniform)
#add_subdirectory(GeneratedApp_gpu_staticRefinement)

add_subdirectory(ABLApp_cpu_staticRefinement)

add_subdirectory(ABLApp_gpu_uniform)
