
add_subdirectory( aerodynamics )
add_subdirectory( component )
add_subdirectory( control_model )
add_subdirectory( discretisation )
add_subdirectory( domain )
add_subdirectory( external_forces )
add_subdirectory( force_model )
add_subdirectory( mpi )
add_subdirectory( output )
add_subdirectory( point3 )
add_subdirectory( turbine_topology )
add_subdirectory( walberla_helper )
add_subdirectory( wind_turbine_core )
